--- a/summer2021/njtechdatamanagement/src/main/resources/application.yml
+++ b/summer2021/njtechdatamanagement/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   jackson:
     default-property-inclusion: non_null
   datasource:
-    url: jdbc:mysql://localhost:3306/njtechdb
+    url: jdbc:mysql://localhost:3306/njtechdata
     password: letmein
     username: root
   sql:
