--- a/summer2021/njtechdatamanagement/src/main/resources/application.yml
+++ b/summer2021/njtechdatamanagement/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     username: root
   sql:
     init:
-      mode: never
+      mode: always
   servlet:
     multipart:
       enabled: true
